--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="about.html">About us</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Our Services
                     </a>
                     <ul class="dropdown-menu">
