--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class=" main justify-content-center text-center">
        
             <div class="main-title">
-          <h1 class="card-title text-white display-5">Welcome to ZekmosFarms<br><Span class="main"> Home Page</Span></h1></div>
+          <h1 class="card-title text-white display-5">Welcome to ZekmosFarm <br><Span class="main"> Home Page</Span></h1></div>
           <div class="main-button">
-          <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home
+          <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home <label for="">url(https://icons8.com/icon/QTdKnYJFHcxX/right-arrow)</label>
             </a><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </div>
         </div>
