--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="main-title">
           <h1 class="card-title text-white display-5"><Span>Wel</Span>come to The<Span class="main"> Official </Span>Page Of<br><span>Zek</span>mos <span>Far</span>ms<br></h1></div>
           <div class="main-button">
-          <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home <br><i class="fa fa-arrow-circle-down" aria-hidden="true"> </i><img src="home.png" alt="home" class="img-home"></a>
+          <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home <br><i class="fa fa-arrow-circle-down" aria-hidden="true"> </i><br><img src="home.png" alt="home" class="img-home"></a>
         </div>
         </div>
       </div>
