--- a/about.html
+++ b/about.html
@@ -42,13 +42,16 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled"><img src="contact.png" alt="icons" class="icons"/>Contact us</a>
+                <a class="nav-link"href="#contact"><img src="contact.png" alt="icons" class="icons"/>Contact us</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <div class="social"> 
+              <i class="fa-brands fa-youtube"></i>
+              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-twitter"></i>
+            </div> 
           </div>
         </div>
       </nav>
