--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Hatchery in Ghana</title>
-    <link rel="icon" href="/zekmosfarms/logo_icon2.png" style="border-radius: 50%;">
+    <link rel="shortcut icon" href="/zekmosfarms/logo_icon2.png" style="border-radius: 50%;">
     <link rel="stylesheet" href="common_style.css"> 
     <link rel="stylesheet" href="home-style.css"> 
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
